syntax = "proto3";

service EchoServer {
    rpc Echo(EchoRequest) returns (EchoRequest) {}
}

message EchoRequest {
    string message = 1;
    string sendBy = 2;
}

message EchoResponse {
    string response = 1;
}
